# AAVengeRTest

./: .gitignore  README.md  environment.yml  pyproject.toml  pytest.ini
.github/workflows/: conda-deployment.yml
conda/: manual_install.sh
src/: AAVengeRTest.py  run.sh
src/lib/: common.py  utils.py
tests/: conftest.py  tests.sh
tests/data/: CompletedSampleSheet.tsv  ete_correct_input_sheet.csv  ete_correct_input_sheet_aavenger_results.csv  ete_correct_input_sheet_record.csv  ete_correct_samplesheet_2.tsv  ete_correct_sites.xlsx  ete_expected_site_features.csv  ete_expected_site_features_differing.csv  ete_incorrect_input_sheet.csv  ete_incorrect_samplesheet.tsv
tests/end_to_end/: test_end_to_end_failure.py
tests/unit/: test_CompareResults.py  test_ResultChecker.py  test_aavenger_test.py  test_input_manager.py  test_run_handler.py
