[project]
name = "AAVengeRTest"
version = "1.0.0"
description = "Test AAVengeR against many datasets"
readme = "README.md"
requires-python = ">=3.7"
#license = {file = "LICENSE"}

authors = [
  {name = "Alexander McFarland"}
]
maintainers = [
  {name = "Alexander McFarland"}
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

dependencies = [
  "biopython",
  "numpy",
  "pandas"
]

[project.optional-dependencies]
dev = ["black"]
test = ["pytest", "pytest-cov"]

[project.urls]
"Homepage" = "https://github.com/agmcfarland/AAVengeRTest/"
"Bug Reports" = "https://github.com/agmcfarland/AAVengeRTest/issues"
"Source" = "https://github.com/agmcfarland/AAVengeRTest/"

[project.scripts]
AAVengeRTest = "AAVengeRTest:main"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}  # Scanning implicit namespaces is active by default

[tool.setuptools.packages.find]
exclude = ["docs*"]